# flash_attention_factory

./: .gitignore  CMakeLists.txt  Makefile  flash_attention.cpp  fmha_forward.hpp  fmha_forward_policy.h  fmha_utils.h  key.pt  launch_kernels.h  launch_kernels_flash.h  launch_kernels_loop.h  launch_kernels_reduce.h  paged_attention.cpp  paged_attention_kernel_loop.hpp  paged_attention_kernel_v2.hpp  paged_attention_loop.cpp  paged_attention_policy_v2.hpp  paged_attention_utils.hpp  query.pt  scale.pt  test.py  test_paged.py  test_paged_fp8cache.py
paged_attention_fp8_loop/: CMakeLists.txt  launch_kernels_fp8_loop.h  paged_attention_fp8_loop.cpp  paged_attention_kernel_fp8_loop.hpp
paged_attention_fp8_reduce/: CMakeLists.txt  launch_kernels_fp8_reduce.h  paged_attention_fp8_reduce.cpp  paged_attention_kernel_fp8_v2.hpp
paged_attention_loop/: CMakeLists.txt
paged_attention_reduce/: CMakeLists.txt  paged_attention_reduce.cpp
