cmake_minimum_required(VERSION 3.20)
project(PagedAttention LANGUAGES CXX)

# ============================================================
# Compiler Setup
# ============================================================
set(CMAKE_CXX_COMPILER icpx)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Debug build option
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -g -fPIC -fsycl -fsycl-targets=spir64_gen")
else()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -fPIC -fsycl -fsycl-targets=spir64_gen")
endif()

# Ahead-of-time (AOT) compilation flags
# set(AOT_FLAGS
#     -Xsycl-target-backend=spir64_gen
#     "\"-device bmg-g21-a0 -options '-doubleGRF -vc-codegen -Xfinalizer -printregusage'\"")

set(AOT_FLAGS
    -Xsycl-target-backend=spir64_gen
    "-device bmg-g21-a0 -options '-doubleGRF -vc-codegen -Xfinalizer -printregusage'"
)

# ============================================================
# Dependencies and Paths
# ============================================================
find_package(Python3 COMPONENTS Interpreter REQUIRED)
execute_process(
    COMMAND ${Python3_EXECUTABLE} -c "import torch, os; print(os.path.dirname(torch.__file__))"
    OUTPUT_VARIABLE TORCH_DIR OUTPUT_STRIP_TRAILING_WHITESPACE
)
execute_process(
    COMMAND ${Python3_EXECUTABLE} -c "import sysconfig; print(sysconfig.get_paths()['include'])"
    OUTPUT_VARIABLE PYTHON_INCLUDE OUTPUT_STRIP_TRAILING_WHITESPACE
)

set(LIB_DIR "${TORCH_DIR}/lib")
set(ESIMD_PATH "$ENV{CMPLR_ROOT}/include/sycl")
set(IPEX_XETLA_DIR "/home/baodi/mount_space/origin_ipex/csrc/gpu/aten/operators/xetla/kernels")

set(TORCH_LIBRARIES
    torch_python
    torch
    torch_xpu
    torch_cpu
    c10
    c10_xpu
)

# ============================================================
# Include directories
# ============================================================
include_directories(
    ${PROJECT_SOURCE_DIR}/include
    ${PROJECT_SOURCE_DIR}/paged_attention_reduce
    ${PROJECT_SOURCE_DIR}/paged_attention_loop
    ${TORCH_DIR}/include
    ${TORCH_DIR}/include/torch/csrc/api/include
    ${ESIMD_PATH}
    ${PYTHON_INCLUDE}
    ${IPEX_XETLA_DIR}/include
    ${IPEX_XETLA_DIR}
)

# ------------------------------------------------------------
# Output Folder Setup
# ------------------------------------------------------------
set(LIB_OUTPUT_DIR ${CMAKE_SOURCE_DIR}/lib)
file(MAKE_DIRECTORY ${LIB_OUTPUT_DIR})

# Ensure lib/ is a valid Python package
file(WRITE ${LIB_OUTPUT_DIR}/__init__.py "# Auto-generated by CMake\n")

# Make all shared libraries (.so) go into lib/
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${LIB_OUTPUT_DIR})

link_directories(${LIB_DIR})

add_subdirectory(paged_attention_reduce)
add_subdirectory(paged_attention_loop)
